[package]
name = "redpanda-flight-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = { version = "0.16.0", features = ["snappy", "zstd"] }
arrow-flight = { version = "47.0.0", features = ["tls"] }
env_logger = "0.10.0"
log = "0.4.20"
rdkafka = { version = "0.34.0", features = ["sasl", "ssl", "libz", "zstd"] }
