[package]
name = "redpanda-flight-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = { version = "0.16.0", features = ["snappy", "zstd"] }
arrow = { version = "47.0.0"}
arrow-flight = { version = "47.0.0", features = ["tls"] }
async-stream = "0.3.5"
futures = "0.3.28"
log = "0.4.20"
rdkafka = { version = "0.34.0", features = ["sasl", "ssl", "libz", "zstd"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["macros", "rt", "rt-multi-thread"] }
tonic = { version = "0.10.2", features = ["tls", "gzip"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["v4"] }
